draft: transferability, plain FFM intro, cuts
- close the thesis with the future-of-the-engineer line (adapted
  from an LLM review of the article itself)
- "The loop in practice": tell the reader the tools are the
  Java-native instance, and which question transfers
- rewrite First half for non-FFM readers: explain native memory
  and each FFM class by its failure mode; drop the flag detail
- rename Half one/two to First/Second half
- fold "Feed the agent ground truth" section into its lessons
  bullet, details preserved in a footnote

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>